--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,27 @@
 {
-    "compilerOptions": {
-      "baseUrl": "./",
-      "target": "esnext",
-      "moduleResolution": "node",
-      "jsx": "preserve",
-      "esModuleInterop": true,
-      "experimentalDecorators": true,
-      "strict": true,
-      "forceConsistentCasingInFileNames": true,
-      "noImplicitReturns": true,
-      "suppressImplicitAnyIndexErrors": true,
-      "declaration": true,
-      "skipLibCheck": true,
-    },
-    "include": [
-      "**/src/**/*",
-      "**/docs/**/*",
-      "scripts/**/*",
-      "**/demos",
-      ".eslintrc.js",
-      "tests",
-      "jest.config.js",
-      "**/fixtures",
-      "./tests/no-duplicated.ts"
-    ]
-  }
+  "compilerOptions": {
+    "baseUrl": "./",
+    "target": "esnext",
+    "moduleResolution": "node",
+    "jsx": "preserve",
+    "esModuleInterop": true,
+    "experimentalDecorators": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "noImplicitReturns": true,
+    "suppressImplicitAnyIndexErrors": true,
+    "declaration": true,
+    "skipLibCheck": true
+  },
+  "include": [
+    "**/src/**/*",
+    "**/docs/**/*",
+    "scripts/**/*",
+    "**/demos",
+    ".eslintrc.js",
+    "tests",
+    "jest.config.js",
+    "**/fixtures",
+    "./tests/no-duplicated.ts"
+  ]
+}
