--- a/package.json
+++ b/package.json
@@ -66,5 +66,8 @@
     "prettier": "^2.3.0",
     "pretty-quick": "^3.1.0",
     "umi-test": "^1.9.6"
+  },
+  "dependencies": {
+    "uuid": "^8.3.2"
   }
 }
