--- a/package.json
+++ b/package.json
@@ -51,21 +51,22 @@
   ],
   "homepage": "https://github.com/wen-haoming/rc-keepalive#readme",
   "devDependencies": {
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@vitejs/plugin-react-refresh": "^1.3.1",
-    "typescript": "^4.3.2",
-    "vite": "^2.3.5",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/react-hooks": "^7.0.0",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/uuid": "^8.3.0",
     "@umijs/fabric": "^2.5.13",
     "@umijs/test": "^3.4.23",
+    "@vitejs/plugin-react-refresh": "^1.3.1",
     "eslint": "^7.27.0",
     "prettier": "^2.3.0",
     "pretty-quick": "^3.1.0",
-    "umi-test": "^1.9.6"
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
+    "typescript": "^4.3.2",
+    "umi-test": "^1.9.6",
+    "vite": "^2.3.5"
   },
   "dependencies": {
     "uuid": "^8.3.2"
