feat: add father build

--- a/package.json
+++ b/package.json
@@ -2,17 +2,20 @@
   "name": "@wenhaoming/rc-keepalive",
   "version": "0.0.1",
   "description": "react-component keepalive",
-  "main": "./src/index.tsx",
-  "module": "./src/index.tsx",
+  "main": "lib/index.js",
+  "module": "es/index.js",
   "types": "lib/index.d.ts",
   "keywords": [
     "react",
     "keeyalive",
     "hooks"
   ],
+  "sideEffects": false,
   "scripts": {
+    "build": "npm run build-lib",
+    "build-lib": "cross-env BUILD_TYPE=lib father-build && cross-env BUILD_TYPE=es father-build",
     "dev": "vite serve demo",
-    "build": "tsc && vite build",
+    "build:demo": "tsc && vite build",
     "serve": "vite preview",
     "test": "umi-test",
     "test:coverage": "umi-test --coverage",
@@ -59,7 +62,9 @@
     "@umijs/fabric": "^2.5.13",
     "@umijs/test": "^3.4.23",
     "@vitejs/plugin-react-refresh": "^1.3.1",
+    "cross-env": "^7.0.3",
     "eslint": "^7.27.0",
+    "father-build": "^1.19.6",
     "prettier": "^2.3.0",
     "pretty-quick": "^3.1.0",
     "react": "^17.0.0",
