--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,6 @@
     "noImplicitReturns": true,
     "suppressImplicitAnyIndexErrors": true,
     "declaration": true,
-    "skipLibCheck": true,
-  },
+    "skipLibCheck": true
+  }
 }
